# barelang

./: .gitignore  .rustfmt.toml  CHANGELOG  Cargo.toml  Makefile  README.md  bac_completion
bacommon/: Cargo.toml  README.md
bacommon/src/: config.rs  const.rs  env.rs  error.rs  etc_utils.rs  lexer.rs  lib.rs  linker.rs  runner.rs  target_generator.rs  vmbuilder.rs
bacore/: Cargo.toml
bacore/core/: arr.bacore.lisp
bacore/src/: error.rs  lib.rs  parse_phase_2.rs
bacore/src/core_syntax/: a_fn.rs  a_ns.rs  a_struct.rs  a_value.rs  const.rs  form_compilation.rs  form_handel.rs  form_struct.rs  form_template_struct.rs  hardcode_fns.rs  mod.rs  name_mangling.rs  spec_etc.rs  template_fn.rs  template_struct.rs  type_anno.rs
examples/: exp0.ba  exp0.bare  exp1.ba  exp2.ba  exp3.ba  main.c  main.cpp
lib/: libbare.cpp  libbare.rs
lib/liblang/: Cargo.toml
lib/liblang/src/: allocator.rs  lib.rs  n.rs
lib/mixin/: Cargo.toml
lib/mixin/src/: allocator.rs  aux.rs  lib.rs  n.rs
lib/rsclib/: Cargo.toml
lib/rsclib/src/: lib.rs
lisparser/: Cargo.toml  Makefile  README.md
lisparser/examples/: 2.lisp  arr.core.lisp
lisparser/src/: data.rs  error.rs  lib.rs  parser.rs  pretty_printer.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
proc_macros2/: Cargo.toml
proc_macros2/src/: lib.rs
runtime/core/: arr.bacore.lisp  mod.bacore.lisp  str.bacore.lisp
src/: badata.rs  baredata.rs  codegen.rs  compiler.rs  datacg.rs  datair.rs  datalsp.rs  dbi.rs  dsl.rs  error.rs  gram.rs  lexer.rs  lib.rs  main.rs  manual_parser.rs  ml_simplifier.rs  parser.rs  rsclib.rs  rslib.rs  rules.rs  semantic_analyzer.rs  synax_parser.rs  syntax_parser.rs  utils.rs
src/backend/: codegen.rs  datacg.rs  mod.rs
src/core/: arr.ba  arr.bacore.lisp  core.ba
src/doc/: 0.md
src/frontend/: datalsp.rs  dsl.rs  gram.rs  lexer.rs  manual_parser.rs  mod.rs  rules.rs
src/middleware/: datair.rs  ml_simplifier.rs  mod.rs
src/middleware/datair/: foreign.rs  mod.rs  primitive.rs  syntax.rs
tests/: common.rs  foreign_api.rs  io_demo.rs  llvm_codegen.rs  llvm_doseq.rs  llvm_iterarray.rs
tests/foreign_api/: main.rs
