[package]
name = "bac"
version = "0.1.0"
edition = "2018"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
indexmap = "1.6.*"
itertools = "0.10.*"
regex = "1"
lazy_static = "1.4.0"
clap = "2.33.3"
uuid = { version = "0.8", features = ["v4"] }
# m6stack = "0.1.0"
m6stack = { git = "https://github.com/minghu6/rust-m6stack", branch = "master" }

[dependencies.proc_macros]
package = "bare-proc-macros"
path = "proc_macros"
version = "0.1.0"  # Same as main

[dependencies.rsclib]
package = "rsc"
path = "lib/rsclib"

[workspace]
members = ["proc_macros", "lib/rsclib"]
