[package]
name = "bacore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lisparser = { path = "../../lisparser" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
indexmap = "1.6.*"
itertools = "0.10.*"
convert_case = "0.4.*"
m6stack = { git = "https://github.com/minghu6/rust-m6stack", branch = "master" }

proc_macros = { package = "bare-proc-macros", path = "../proc_macros" }
