[package]
name = "bare-proc-macros"
version = "0.1.0"
edition = "2018"


[dependencies]
proc-macro2 = "^1.0"
quote = "^1.0"
syn = "^1.0"
uuid = { version = "0.8", features = ["v4"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }


[lib]
proc-macro = true
